<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#090909"
        tools:context=".addSets">

        <Button
            android:id="@+id/button13"
            android:layout_width="61dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:backgroundTint="#907BB8"
            android:fontFamily="@font/aldrich"
            android:text="@string/plusWeight"
            app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="277dp"
            android:layout_height="40dp"
            android:layout_marginTop="248dp"
            android:backgroundTint="#F6F3F3"
            android:fontFamily="@font/aldrich"
            android:text="@string/reps"
            android:textColor="#E9E3E3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:layout_width="127dp"
            android:layout_height="43dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/plusbutton1"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="277dp"
            android:layout_height="40dp"
            android:layout_marginTop="84dp"
            android:backgroundTint="#F6F3F3"
            android:fontFamily="@font/aldrich"
            android:text="@string/Weights"
            android:textColor="#E9E3E3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="127dp"
            android:layout_height="43dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/plusbutton1"
            android:layout_width="61dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="104dp"
            android:backgroundTint="#907BB8"
            android:fontFamily="@font/aldrich"
            android:text="@string/plusWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button10"
            android:layout_width="61dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#907BB8"
            android:fontFamily="@font/aldrich"
            android:text="@string/Minus"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button11"
            android:layout_width="61dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#907BB8"
            android:fontFamily="@font/aldrich"
            android:text="@string/Minus"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/button16"
            android:layout_width="137dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:backgroundTint="#38ABDE"
            android:fontFamily="@font/aldrich"
            android:text="@string/Savebutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button17"
            android:layout_width="137dp"
            android:layout_height="42dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:backgroundTint="#38ABDE"
            android:fontFamily="@font/aldrich"
            android:text="@string/clearButton"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>